--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "tw.idv.jew.datastoresample"
+        applicationId 'tw.idv.jew.sharedpreferencessample'
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.1.1'
     def preference_version = "1.1.1"
     // Kotlin
     implementation "androidx.preference:preference-ktx:$preference_version"
